# openbb-app-builder-agent

./: .gitignore  README.md  pyproject.toml  run.sh
src/openbb_app_builder_agent/: __init__.py  claude_runner.py  config.py  main.py  output_parser.py  prompt_builder.py  request_parser.py  session_manager.py
tests/: test_request_parser.py  test_smoke.py
